--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
-
 <style>
   :root{
     --brand:#2563eb; --brand-2:#1d4ed8; --ok:#16a34a; --warn:#d97706; --bad:#b91c1c;
@@ -44,7 +43,6 @@
   .btn.warn{background:linear-gradient(180deg,var(--warn),#b45309); color:#fff; border-color:transparent}
   .btn.bad{background:linear-gradient(180deg,var(--bad),#7f1d1d); color:#fff; border-color:transparent}
   .toolbar{display:flex; gap:10px; flex-wrap:wrap; align-items:center}
-  .muted{color:var(--muted); font-size:12px}
   table{width:100%; border-collapse:separate; border-spacing:0}
   th,td{padding:10px 12px; border-bottom:1px solid var(--line); text-align:left; vertical-align:top; font-size:14px}
   th{font-size:12px; color:var(--muted)}
@@ -53,11 +51,11 @@
   .pill.ok{background:#dcfce7; color:#166534}
   .pill.bad{background:#fee2e2; color:#7f1d1d}
   .pill.warn{background:#fff7ed; color:#92400e}
+  .muted{color:var(--muted); font-size:12px}
   .tag{display:inline-block; padding:2px 6px; border-radius:999px; border:1px solid var(--line); font-size:11px; background:#f1f5f9}
   .due{color:#fff; background:#ef4444; padding:2px 6px; border-radius:8px; font-weight:800; font-size:11px}
   .table-scroll{width:100%; overflow:auto}
   #loading{display:none; align-items:center; gap:8px; font-weight:800}
-  #global_msg{display:none;color:#b91c1c;padding:8px 16px}
   #auth{position:fixed;inset:0;display:flex;align-items:center;justify-content:center;background:rgba(0,0,0,.06);backdrop-filter:blur(4px);z-index:9999}
   #auth .panel{width:360px;max-width:94%;background:var(--surface);border:1px solid var(--line);border-radius:14px;box-shadow:var(--shadow);padding:16px}
   .modal{position:fixed; inset:0; background:rgba(0,0,0,.55); display:none; align-items:center; justify-content:center; padding:18px; z-index:1000}
@@ -84,7 +82,6 @@
       <button class="btn" onclick="signOut()"><i class="fa-solid fa-right-from-bracket"></i> Dil</button>
     </div>
   </div>
-  <div id="global_msg"></div>
 </header>
 
 <main class="wrap grid two" id="app">
@@ -140,7 +137,7 @@
   <section class="card">
     <div class="flex" style="justify-content:space-between">
       <h2 style="margin:0;font-size:16px">Leads</h2>
-      <div class="flex">
+    <div class="flex">
         <input id="q" placeholder="Kërko (kompania, kontakt, tel, email)" oninput="render()">
         <select id="flt_source" onchange="render()">
           <option value="">Burimi (gjithë)</option><option>QKB</option><option>Google Maps</option><option>LinkedIn</option><option>Tjetër</option>
@@ -285,115 +282,85 @@
 const SUPABASE_URL = 'https://xsdcprmwthmqzorojykl.supabase.co';
 const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InhzZGNwcm13dGhtcXpvcm9qeWtsIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTc0NDU2ODUsImV4cCI6MjA3MzAyMTY4NX0.xql-MTN1szGVtdJkMmGxYRZ4mXNJ1a2vSXV2Fb1o4fw';
 
-/** Opsionale: webhook (Make/Zapier/Server) për email-notifications.
+/** (OPSIONALE) Webhook për njoftimin e asignimit me email (Make/Zapier/Server).
  *  Nëse lihet bosh, bëhet fallback në mailto: */
-const WEBHOOK_URL = ''; // p.sh. 'https://hooks.zapier.com/....'
+const WEBHOOK_URL = ''; // p.sh. 'https://hooks.zapier.com/...' ose lëre bosh
 
 const sb = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY, {
   auth: { persistSession: true, autoRefreshToken: true, detectSessionInUrl: true }
 });
-console.log('[Supabase]', SUPABASE_URL);
 
 /* ===== STATE/UTIL ===== */
 let LEADS = [];
 let COMMENTS = {};
 let COUNTS = new Map();
 let CURRENT_ID = null;
-let PROFILES = []; // {id, email, full_name, role}
-let SELF = null;   // {id, email}
+let PROFILES = []; // {id,email,full_name,role}
+let SELF = null;   // {id,email}
 const EL = sel => document.querySelector(sel);
 const ESC = s => (s||'').replace(/[&<>"']/g, m=>({ '&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;', "'":'&#39;' }[m]));
 function todayStr(d=new Date()){ const z=n=>String(n).padStart(2,'0'); return d.getFullYear()+'-'+z(d.getMonth()+1)+'-'+z(d.getDate()); }
 function addDays(date,days){ const d=new Date(date); d.setDate(d.getDate()+days); return d; }
 function on(){ EL('#loading').style.display='inline-flex'; }
 function off(){ EL('#loading').style.display='none'; }
-function showMsg(t){ const m=EL('#global_msg'); if(!m) return; m.textContent=t||''; m.style.display=t?'block':'none'; }
 
-/* ===== AUTH (stabilizuar) ===== */
-function showAuth(){ EL('#auth').style.display='flex'; }
-function hideAuth(){ EL('#auth').style.display='none'; }
-
+/* ===== AUTH ===== */
 async function updateHeaderUser(session){
   const slot = EL('#user_slot');
-  if(session?.user){ SELF = { id: session.user.id, email: session.user.email }; slot.textContent = '• ' + (session.user.email || ''); }
-  else{ SELF = null; slot.textContent = ''; }
+  if(session?.user){
+    SELF = { id: session.user.id, email: session.user.email };
+    slot.textContent = '• ' + (session.user.email || '');
+  }else{
+    SELF = null;
+    slot.textContent = '';
+  }
 }
-
-async function initAuthOnce(){
-  on(); showMsg('');
-  try{
-    const { data:{ session }, error } = await sb.auth.getSession();
-    if(error){ showMsg('Auth error: '+(error.message||error)); showAuth(); return; }
-    if(session?.user){
-      hideAuth(); await updateHeaderUser(session); await bootstrap();
-    }else{
-      showAuth();
-    }
-  }catch(e){
-    console.warn('[initAuthOnce]', e);
-    showMsg('Nuk u lexua sesioni. Provo sërish.');
-    showAuth();
-  }finally{ off(); }
+async function requireSession(){
+  const { data: { session } } = await sb.auth.getSession();
+  if(session){
+    EL('#auth').style.display='none';
+    await updateHeaderUser(session);
+    return true;
+  }else{
+    EL('#auth').style.display='flex';
+    return false;
+  }
 }
-
 async function signIn(){
-  on(); showMsg(''); EL('#auth_msg').textContent='';
-  try{
-    const email = EL('#auth_email').value.trim();
-    const password = EL('#auth_pwd').value;
-    const { error } = await sb.auth.signInWithPassword({ email, password });
-    if(error){ EL('#auth_msg').textContent = error.message || 'Login dështoi'; return; }
+  const email = EL('#auth_email').value.trim();
+  const password = EL('#auth_pwd').value;
+  const { error } = await sb.auth.signInWithPassword({ email, password });
+  EL('#auth_msg').textContent = error ? (error.message || 'Login dështoi') : '';
+  if(!error){
     if (location.hash.includes('access_token')) history.replaceState({}, document.title, location.pathname + location.search);
+    EL('#auth').style.display='none';
     const { data:{ session } } = await sb.auth.getSession();
     await updateHeaderUser(session);
-    hideAuth();
     await bootstrap();
-  }catch(e){
-    console.warn('[signIn]', e); EL('#auth_msg').textContent = 'Gabim gjatë hyrjes.';
-  }finally{ off(); }
+  }
 }
-
 async function signUp(){
-  on(); EL('#auth_msg').textContent='';
-  try{
-    const email = EL('#auth_email').value.trim();
-    const password = EL('#auth_pwd').value;
-    const { error } = await sb.auth.signUp({ email, password });
-    EL('#auth_msg').textContent = error ? (error.message || 'Sign up dështoi') : 'U krijua. Kontrollo email-in nqs kërkohet verifikim.';
-  }finally{ off(); }
+  const email = EL('#auth_email').value.trim();
+  const password = EL('#auth_pwd').value;
+  const { error } = await sb.auth.signUp({ email, password });
+  EL('#auth_msg').textContent = error ? (error.message || 'Sign up dështoi') : 'U krijua. Kontrollo email-in (nëse kërkohet verifikim).';
 }
-
 async function signOut(){
-  on(); showMsg('');
-  try{ await sb.auth.signOut(); }catch{}
+  await sb.auth.signOut();
   LEADS = []; COMMENTS = {}; COUNTS = new Map(); PROFILES = []; render();
-  await updateHeaderUser(null);
-  showAuth();
-  off();
+  EL('#user_slot').textContent = '';
+  EL('#auth').style.display='flex';
 }
-
-sb.auth.onAuthStateChange(async (event, session) => {
-  if(event === 'SIGNED_IN' || event === 'TOKEN_REFRESHED'){
-    hideAuth(); await updateHeaderUser(session);
-  }
-  if(event === 'SIGNED_OUT' || event === 'USER_DELETED'){
-    await signOut();
-  }
+sb.auth.onAuthStateChange(async (_evt, session) => {
+  if(session){ EL('#auth').style.display='none'; await updateHeaderUser(session); await bootstrap(); }
+  else{ EL('#auth').style.display='flex'; }
 });
 
 /* ===== DB: PROFILES ===== */
 async function fetchProfiles(){
-  try{
-    const { data, error } = await sb.from('profiles').select('id,email,full_name,role').order('email', {ascending:true});
-    if(error){
-      showMsg("Nuk lexoj dot 'profiles' (RLS/GRANT). Duhet: GRANT SELECT ON public.profiles TO authenticated;");
-      console.warn('[profiles]', error);
-      return [];
-    }
-    return data || [];
-  }catch(e){
-    console.warn('[profiles ex]', e); return [];
-  }
+  const { data, error } = await sb.from('profiles').select('id,email,full_name,role').order('email', {ascending:true});
+  if(error){ console.warn('[profiles]', error); return []; }
+  return data || [];
 }
 
 /* ===== DB: COUNTS ===== */
@@ -421,7 +388,7 @@ async function fetchLeads(){
     return data||[];
   }catch(err){
     console.error('[fetchLeads]', err);
-    showMsg('Nuk u lexuan lead-et nga DB. Kontrollo RLS/GRANT-et/kolonat.');
+    alert('Nuk u lexuan lead-et nga DB.\n' + (err.message || 'Kontrollo RLS/GRANT-et/kolonat.'));
     return [];
   }
 }
@@ -443,14 +410,19 @@ async function insertLead(obj){
   return data;
 }
 async function updateLeadFields(id, fields){
-  const { error } = await sb.from('leads').update(fields).eq('id', id);
+  // vendos edhe updated_by = SELF.id
+  const { error } = await sb.from('leads').update({ ...fields, updated_by: SELF?.id || null }).eq('id', id);
   if(error){ console.warn('[updateLeadFields]', error); alert('UPDATE dështoi (RLS/kolonat).'); }
 }
 
 /* ===== DB: UPDATES/COMMENTS ===== */
 async function fetchComments(lead_id){
   try{
-    const { data, error } = await sb.from('lead_updates').select('*').eq('lead_id', lead_id).order('ts',{ascending:false});
+    const { data, error } = await sb
+      .from('lead_updates')
+      .select('id, ts, kind, comment, new_result, next_follow_up, meeting_status, meeting_date, field_agent, email, actor_id, actor_email')
+      .eq('lead_id', lead_id)
+      .order('ts',{ascending:false});
     if(error){ console.warn('[fetchComments]', error); return []; }
     return data||[];
   }catch(err){
@@ -534,7 +506,7 @@ function render(){
   EL('#rows').innerHTML = arr.map(x=>{
     const due = x.next_follow_up && x.next_follow_up <= todayStr() ? `<span class="due">Due</span>` : '';
     const commentsCount = COUNTS.get(x.id) ?? 0;
-    const creatorEmail = (PROFILES.find(p=>p.id===x.created_by)?.email) || '—';
+    const creatorEmail  = (PROFILES.find(p=>p.id===x.created_by)?.email) || '—';
     const assignedEmail = (PROFILES.find(p=>p.id===x.assigned_to)?.email) || '';
     const assignedBadge = assignedEmail ? ` · <span class="tag" title="Assigned to">${ESC(assignedEmail)}</span>` : '';
     return `<tr>
@@ -645,7 +617,8 @@ function renderTimeline(id){
   const arr = COMMENTS[id] || [];
   const html = arr.map(c=>{
     const d = new Date(c.ts);
-    const meta = c.kind==='comment' ? 'Koment' : (c.kind==='create' ? 'Krijuar' : 'Përditësim');
+    const who = c.actor_email || (PROFILES.find(p=>p.id===c.actor_id)?.email) || '—';
+    const meta = (c.kind==='comment' ? 'Koment' : (c.kind==='create' ? 'Krijuar' : 'Përditësim')) + ' · ' + who;
     const details = [
       c.comment ? `<div>${ESC(c.comment)}</div>` : '',
       c.new_result ? `<div><strong>Rezultat:</strong> ${ESC(c.new_result)}</div>` : '',
@@ -741,15 +714,18 @@ async function assignLead(){
 
   on();
   try{
+    // 1) update në leads
     await updateLeadFields(x.id, { assigned_to: assignee });
 
+    // 2) shënim në timeline
     const assigneeEmail = (PROFILES.find(p=>p.id===assignee)?.email)||'';
     await insertUpdate(x.id, { comment: `Assigned to ${assigneeEmail}`, new_result: x.answer_outcome||null });
 
+    // 3) njoftim email
     await notifyAssignee({ lead: x, assigneeId: assignee, assigneeEmail });
 
     await refreshLeads();
-    openModal(x.id); // rifresko audit në modal
+    openModal(x.id); // rifresko modal me audit të përditësuar
   }catch(err){
     console.error('[assignLead]', err);
     alert('Asignimi dështoi.');
@@ -758,7 +734,6 @@ async function assignLead(){
 
 async function notifyAssignee({ lead, assigneeId, assigneeEmail }){
   try{
-    const creatorEmail = (PROFILES.find(p=>p.id===lead.created_by)?.email) || '';
     const title = `Lead i ri i caktuar: ${lead.company}`;
     const body = `Përshëndetje,
 Ju është caktuar një lead i ri:
@@ -767,7 +742,7 @@ Ju është caktuar një lead i ri:
 • Kontakt: ${lead.contact||'-'}
 • Tel: ${lead.phone||'-'}
 • Email: ${lead.email||'-'}
-• Caktuar nga: ${SELF?.email||creatorEmail||'-'}
+• Caktuar nga: ${SELF?.email||'-'}
 
 Ju lutem ndiqeni rastin në Mini-CRM.`;
 
@@ -866,29 +841,28 @@ async function refreshLeads(){
     render();
   }catch(err){
     console.error('[refreshLeads]', err);
-    showMsg('Gabim gjatë rifreskimit të të dhënave.');
+    alert('Gabim gjatë rifreskimit të të dhënave.');
   }finally{
     off();
   }
 }
 
 async function bootstrap(){
-  on(); showMsg('');
+  on();
   try{
-    PROFILES = await fetchProfiles();
+    PROFILES = await fetchProfiles();  // kërkon GRANT SELECT te profiles
     await refreshLeads();
-  }catch(e){
-    console.warn('[bootstrap]', e);
-    showMsg('Gabim gjatë bootstrap. Shiko Console për detaje.');
   }finally{ off(); }
 }
 
 /* ===== INIT ===== */
 document.addEventListener('DOMContentLoaded', async ()=>{
+  // Hiq fragment auth (#access_token=...) nëse Supabase kthen diçka në URL
   if (window.location.hash && window.location.hash.includes('access_token')) {
     history.replaceState({}, document.title, window.location.pathname + window.location.search);
   }
-  await initAuthOnce();
+  const ok = await requireSession();
+  if(ok){ await bootstrap(); }
 });
 </script>
 </body>
